--- a/style.css
+++ b/style.css
@@ -5,6 +5,8 @@
 }
 .container {
   max-width: 1240px;
+  margin: 0 auto;
+  height: 100%;
 }
 a {
   text-decoration: none;
@@ -71,7 +73,7 @@ a {
   height: 700px;
 }
 .hero__info {
-  padding: 200px 0;
+  height: 100%;
   display: flex;
   align-items: center;
   justify-content: center;
@@ -161,7 +163,7 @@ a {
   display: flex;
   align-items: center;
   justify-content: center;
-  padding: 30px;
+  padding: 40px;
 }
 .biograhpy__header-title {
   color: #444;
@@ -223,5 +225,123 @@ a {
   .biograhpy-group img {
     width: 126px;
     height: 126px;
+  }
+}
+.biography-footer-btn {
+  border: 0;
+  width: 180px;
+  height: 40px;
+  border-radius: 40px;
+  border: 2px solid #ff4e50;
+  background: #fff;
+  color: #ff4e50;
+  font-size: 14px;
+  font-weight: 700;
+  cursor: pointer;
+}
+.biography-footer {
+  margin: 30px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+.img-group {
+  position: relative;
+}
+.img-group2 {
+  position: relative;
+}
+.img-group3 {
+  position: relative;
+}
+.img-group4 {
+  position: relative;
+}
+.img-group5 {
+  position: relative;
+}
+.img-group6 {
+  position: relative;
+}
+.img-group7 {
+  position: relative;
+}
+.img-group-text {
+  color: #fff;
+  font-size: 22px;
+  font-weight: 700;
+  position: absolute;
+  bottom: 150px;
+  left: 25px;
+}
+.img-group img {
+  border-radius: 4px;
+  background: #000;
+}
+.img-group5 {
+  grid-column: 2/4;
+}
+.img-group6 {
+  grid-column: 1/3;
+}
+.img-block {
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr;
+  gap: 10px;
+}
+
+.img-header-title {
+  color: #444;
+  font-size: 22px;
+  font-weight: 700;
+}
+.img-header {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  padding: 30px;
+}
+
+.img-block img {
+  width: 100%;
+}
+@media screen and (max-width: 768px) {
+  .img-block {
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+  }
+  .img-block img {
+    width: 100%;
+  }
+}
+@media screen and (max-width: 600px) {
+  .img-block {
+    display: flex;
+    align-items: center;
+    flex-direction: column;
+  }
+  .img-block img {
+    width: 300px;
+    height: 120px;
+  }
+}
+@media screen and (max-width: 600px) {
+  .img-header {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    text-align: center;
+  }
+  .img-header-title {
+    width: 280px;
+  }
+  .img-group-text {
+    position: absolute;
+    bottom: 40px;
+    left: 35px;
+    display: flex;
+    text-align: center;
+    align-items: center;
+    justify-content: center;
   }
 }
